fix: navbar nto disappearing on mobile scroll

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -47,6 +47,9 @@ body {
 }
 
 @media only screen and (max-width:1000px) {
+    #navbar {
+        position: initial;
+    }
 
     #navbar,
     #navbar ul {
